--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -25,7 +25,7 @@
     position: absolute;
     top: -40px;
     right: 0;
-    background-color: var(--secondary-color);
+    background-color:  var(--secondary-color);
     color: white;
     border: none;
     border-radius: 8px 8px 0 0;
@@ -48,8 +48,7 @@
     background-color: #f9f9f9;
     flex: 1;
     padding: 10px;
-    overflow-y: auto; /* Enable vertical scrolling */
-    max-height: 300px; /* Set a max height for scrolling */
+    overflow-y: auto;
 }
 
 .chatbox-message {
@@ -75,7 +74,7 @@
 }
 
 .chatbox-input button {
-    background-color: var(--secondary-color);
+    background-color:  var(--secondary-color);
     color: white;
     border: none;
     border-radius: 4px;
