--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -45,11 +45,12 @@
     width: 100%;
     height: auto;
     aspect-ratio: 16 / 9; /* Maintains a 16:9 aspect ratio */
+    overflow: hidden;
 }
 
 .service-card img {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
     display: block;
 }
