--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: calc(100vh - 100px); /* Adjust based on your header/footer height */
+    min-height: calc(100vh - 100px);
 }
 
 .signup-form {
@@ -71,4 +71,18 @@ input {
 
 .form-footer a:hover {
     text-decoration: underline;
+}
+
+/* New CSS for role selection */
+.form-group div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.form-group div label {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+    white-space: nowrap; /* Prevent line breaks */
 }
